UI changes and rough database setup
